--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -88,21 +88,22 @@
     color: $color_secondary;
     text-transform: uppercase;
     margin: 0;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
-@mixin sidebar_component {
+@mixin sidebar_component_boxed {
     border-radius: 3px;
     padding: 10px 13px 12px 13px;
     background: $color_sidebar_bg;
-    @include min-screen(721px) {
-        box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.19), 0 2px 10px 0 rgba(0, 0, 0, 0.18);
-    }
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.19), 0 2px 10px 0 rgba(0, 0, 0, 0.18);
 }
 
 @mixin sidebar_component_scroll {
     border-radius: 3px;
     padding: 10px 2px 13px 13px;
+    @include max-screen(720px) {
+        padding: 10px 0px 0px 0px;
+    }
     background: $color_sidebar_bg;
     @include min-screen(721px) {
         box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.19), 0 2px 10px 0 rgba(0, 0, 0, 0.18);
